Add Qian et al. task figure

--- a/index.html
+++ b/index.html
@@ -758,6 +758,10 @@ Yoda
 <section class="slide level2">
 
 
+<img data-src="include/img/qian-berenbaum-gilmore-tasks.png" class="r-stretch quarto-figure-center"><p class="caption">Vision tasks used in Qian et al.&nbsp;2022</p></section>
+<section class="slide level2">
+
+
 <img data-src="include/img/sex-diffs-project-github.png" class="r-stretch quarto-figure-center"><p class="caption">https://github.com/gilmore-lab/sex-differences-project</p></section>
 <section id="section" class="slide level2" data-background-iframe="https://gilmore-lab.github.io/sex-differences-project/analysis/qian-berenbaum-gilmore.html">
 <h2></h2>
@@ -794,8 +798,22 @@ Yoda
 </div>
 </div>
 </section>
-<section id="internal-psi-states-not-observable-but" class="slide level2">
-<h2>Internal <span class="math inline">\(\psi\)</span> states not observable, but…</h2>
+<section id="lessons-learned" class="slide level2">
+<h2>Lessons learned</h2>
+<div>
+<ul>
+<li class="fragment">Preregistration helps draw bright line between <em>confirmatory</em> and <em>exploratory</em> analyses</li>
+<li class="fragment">Power <em>curve</em> analyses (different <span class="math inline">\(n\)</span>’s, effect sizes) informative and useful</li>
+<li class="fragment">Internally reproducible workflows <span class="math inline">\(\rightarrow\)</span> easier to share
+<ul>
+<li class="fragment">Especially scriptable figures!</li>
+</ul></li>
+<li class="fragment">More commonplace prior data sharing (by others) would have really helped</li>
+</ul>
+</div>
+</section>
+<section id="internal-psi-states-not-directly-observable-but" class="slide level2">
+<h2>Internal <span class="math inline">\(\psi\)</span> states not directly observable, but…</h2>
 <ul>
 <li>Behaviors are!</li>
 <li>Contexts can be!</li>
