Add more sex diffs figures and slides.

--- a/index.html
+++ b/index.html
@@ -762,6 +762,14 @@ Yoda
 <section class="slide level2">
 
 
+<img data-src="include/img/mental-rotation-task.png" class="r-stretch quarto-figure-center"><p class="caption">Mental rotation task</p></section>
+<section class="slide level2">
+
+
+<img data-src="include/img/hobbies.png" class="r-stretch quarto-figure-center"><p class="caption">Hobbies task</p></section>
+<section class="slide level2">
+
+
 <img data-src="include/img/sex-diffs-project-github.png" class="r-stretch quarto-figure-center"><p class="caption">https://github.com/gilmore-lab/sex-differences-project</p></section>
 <section id="section" class="slide level2" data-background-iframe="https://gilmore-lab.github.io/sex-differences-project/analysis/qian-berenbaum-gilmore.html">
 <h2></h2>
@@ -802,14 +810,59 @@ Yoda
 <h2>Lessons learned</h2>
 <div>
 <ul>
+<li class="fragment">Replications are good</li>
 <li class="fragment">Preregistration helps draw bright line between <em>confirmatory</em> and <em>exploratory</em> analyses</li>
 <li class="fragment">Power <em>curve</em> analyses (different <span class="math inline">\(n\)</span>’s, effect sizes) informative and useful</li>
 <li class="fragment">Internally reproducible workflows <span class="math inline">\(\rightarrow\)</span> easier to share
 <ul>
 <li class="fragment">Especially scriptable figures!</li>
 </ul></li>
-<li class="fragment">More commonplace prior data sharing (by others) would have really helped</li>
 </ul>
+</div>
+</section>
+<section class="slide level2">
+
+<div>
+<ul>
+<li class="fragment">More commonplace prior data sharing (by others) would have really helped</li>
+<li class="fragment">Plot (all of) your data</li>
+</ul>
+</div>
+</section>
+<section class="slide level2">
+
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><strong>Contrast Task</strong></p>
+<p><img data-src="include/img/336-contrast-staircase.png"></p>
+</div><div class="column" style="width:50%;">
+<p><strong>Motion Task</strong></p>
+<p><img data-src="include/img/336-motion-staircase.png"></p>
+</div>
+</div>
+</section>
+<section class="slide level2">
+
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><strong>Contrast Task</strong></p>
+<p><img data-src="include/img/350-contrast-staircase.png"></p>
+</div><div class="column" style="width:50%;">
+<p><strong>Motion Task</strong></p>
+<p><img data-src="include/img/350-motion-staircase.png"></p>
+</div>
+</div>
+</section>
+<section class="slide level2">
+
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><strong>Contrast Task</strong></p>
+<p><img data-src="include/img/393-contrast-staircase.png"></p>
+</div><div class="column" style="width:50%;">
+<p><strong>Motion Task</strong></p>
+<p><img data-src="include/img/393-motion-staircase.png"></p>
+</div>
 </div>
 </section>
 <section id="internal-psi-states-not-directly-observable-but" class="slide level2">
@@ -974,13 +1027,16 @@ participant-gender Unknown or not reported White
 <section id="gilmores-additions" class="slide level2">
 <h2>Gilmore’s additions</h2>
 <ul>
-<li>You <em>can</em> learn to code, but do so in the context of solving a specific problem</li>
+<li>You <em>can</em> learn to code, but do so in the context of solving a specific problem
+<ul>
+<li>Quarto Qrew</li>
+</ul></li>
 <li>Strive for <em>methods</em> reproducibility <span class="citation" data-cites="Goodman2016-fi">(<a href="#/references" role="doc-biblioref" onclick="">Goodman, Fanelli, &amp; Ioannidis, 2016</a>)</span>
 <ul>
 <li>Transparent to you <span class="math inline">\(\rightarrow\)</span> transparent to others</li>
 <li>Reproducible for you <span class="math inline">\(\rightarrow\)</span> reproducible for others</li>
 </ul></li>
-<li>Replicate and/or simulate</li>
+<li>Replicate and/or simulate; visualize early and often</li>
 <li>Preregister</li>
 </ul>
 </section>
