--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@ Yoda
 <li class="fragment">And sadly uncommon</li>
 <li class="fragment">More commonplace prior data &amp; materials sharing (by others) would have really helped.</li>
 <li class="fragment">Bigger (combined) samples <span class="math inline">\(\rightarrow\)</span> higher power to detect smaller effects.</li>
-<li class="fragment">Didn’t ask, but shouldn’t have to; most authors don’t even when asked <span class="citation" data-cites="Watson2022-ox">(<a href="#/references" role="doc-biblioref" onclick="">Watson, 2022</a>)</span>.</li>
+<li class="fragment">Didn’t ask, but shouldn’t have to; most authors don’t share even when asked <span class="citation" data-cites="Watson2022-ox Gabelica2022-nt Tedersoo2021-ad Vanpaemel2015-zr Wicherts2006-de">(<a href="#/references" role="doc-biblioref" onclick="">Gabelica, Bojčić, &amp; Puljak, 2022</a>; <a href="#/references" role="doc-biblioref" onclick="">Tedersoo et al., 2021</a>; <a href="#/references" role="doc-biblioref" onclick="">Vanpaemel, Vermorgen, Deriemaecker, &amp; Storms, 2015</a>; <a href="#/references" role="doc-biblioref" onclick="">Watson, 2022</a>; <a href="#/references" role="doc-biblioref" onclick="">Wicherts, Borsboom, Kats, &amp; Molenaar, 2006</a>)</span> <strong>even by a journal editor</strong> [Miyakawa2020-wu].</li>
 <li class="fragment">Wrote (new) code for both vision tasks (and shared it).</li>
 </ul></li>
 </ul>
@@ -1433,6 +1433,9 @@ Errington, T. M., Denis, A., Perfito, N., Iorns, E., &amp; Nosek, B. A. (2021). 
 <div id="ref-Feynman1974-ld" class="csl-entry" role="listitem">
 Feynman, R. P. (1974). Cargo cult science. <a href="https://calteches.library.caltech.edu/51/2/CargoCult.htm" class="uri">https://calteches.library.caltech.edu/51/2/CargoCult.htm</a>. Retrieved from <a href="https://calteches.library.caltech.edu/51/2/CargoCult.htm">https://calteches.library.caltech.edu/51/2/CargoCult.htm</a>
 </div>
+<div id="ref-Gabelica2022-nt" class="csl-entry" role="listitem">
+Gabelica, M., Bojčić, R., &amp; Puljak, L. (2022). Many researchers were not compliant with their published data sharing statement: A mixed-methods study. <em>Journal of Clinical Epidemiology</em>, <em>150</em>, 33–41. <a href="https://doi.org/10.1016/j.jclinepi.2022.05.019">https://doi.org/10.1016/j.jclinepi.2022.05.019</a>
+</div>
 <div id="ref-GilmoreAdolph2017" class="csl-entry" role="listitem">
 Gilmore, R. O., &amp; Adolph, K. E. (2017). Video can make behavioural research more reproducible. <em>Nature Human Behavior</em>, <em>1</em>. <a href="https://doi.org/10.1038/s41562-017-0128">https://doi.org/10.1038/s41562-017-0128</a>
 </div>
@@ -1484,8 +1487,17 @@ Soska, K. C., Xu, M., Gonzalez, S. L., Herzberg, O., Tamis-LeMonda, C. S., Gilmo
 <div id="ref-Szucs2017-fc" class="csl-entry" role="listitem">
 Szucs, D., &amp; Ioannidis, J. P. A. (2017). Empirical assessment of published effect sizes and power in the recent cognitive neuroscience and psychology literature. <em>PLoS Biology</em>, <em>15</em>(3), e2000797. <a href="https://doi.org/10.1371/journal.pbio.2000797">https://doi.org/10.1371/journal.pbio.2000797</a>
 </div>
+<div id="ref-Tedersoo2021-ad" class="csl-entry" role="listitem">
+Tedersoo, L., Küngas, R., Oras, E., Köster, K., Eenmaa, H., Leijen, Ä., … Sepp, T. (2021). Data sharing practices and data availability upon request differ across scientific disciplines. <em>Scientific Data</em>, <em>8</em>(1), 192. <a href="https://doi.org/10.1038/s41597-021-00981-0">https://doi.org/10.1038/s41597-021-00981-0</a>
+</div>
+<div id="ref-Vanpaemel2015-zr" class="csl-entry" role="listitem">
+Vanpaemel, W., Vermorgen, M., Deriemaecker, L., &amp; Storms, G. (2015). Are we wasting a good crisis? The availability of psychological research data after the storm. <em>Collabra</em>, <em>1</em>(1). <a href="https://doi.org/10.1525/collabra.13">https://doi.org/10.1525/collabra.13</a>
+</div>
 <div id="ref-Watson2022-ox" class="csl-entry" role="listitem">
 Watson, C. (2022, June). Many researchers say they’ll share data — but don’t. <a href="http://dx.doi.org/10.1038/d41586-022-01692-1" class="uri">http://dx.doi.org/10.1038/d41586-022-01692-1</a>. <a href="https://doi.org/10.1038/d41586-022-01692-1">https://doi.org/10.1038/d41586-022-01692-1</a>
+</div>
+<div id="ref-Wicherts2006-de" class="csl-entry" role="listitem">
+Wicherts, J. M., Borsboom, D., Kats, J., &amp; Molenaar, D. (2006). The poor availability of psychological research data for reanalysis. <em>The American Psychologist</em>, <em>61</em>(7), 726–728. <a href="https://doi.org/10.1037/0003-066X.61.7.726">https://doi.org/10.1037/0003-066X.61.7.726</a>
 </div>
 <div id="ref-Yarkoni2020-se" class="csl-entry" role="listitem">
 Yarkoni, T. (2020). The generalizability crisis. <em>The Behavioral and Brain Sciences</em>, 1–37. <a href="https://doi.org/10.1017/S0140525X20001685">https://doi.org/10.1017/S0140525X20001685</a>
