Reorder some slides; add to Ideas slide.

--- a/index.html
+++ b/index.html
@@ -943,10 +943,6 @@ Yoda
 </div>
 </div>
 </section>
-<section class="slide level2">
-
-
-<img data-src="include/img/sex-diffs-project-github.png" class="r-stretch quarto-figure-center"><p class="caption"><a href="https://github.com/gilmore-lab/sex-differences-project" class="uri">https://github.com/gilmore-lab/sex-differences-project</a></p></section>
 <section id="lessons-learned" class="slide level2">
 <h2>Lessons learned</h2>
 <div>
@@ -1028,6 +1024,10 @@ Yoda
 <section id="section" class="slide level2" data-background-iframe="https://gilmore-lab.github.io/sex-differences-project/analysis/qian-berenbaum-gilmore.html">
 <h2></h2>
 </section>
+<section class="slide level2">
+
+
+<img data-src="include/img/sex-diffs-project-github.png" class="r-stretch quarto-figure-center"><p class="caption"><a href="https://github.com/gilmore-lab/sex-differences-project" class="uri">https://github.com/gilmore-lab/sex-differences-project</a></p></section>
 <section class="slide level2">
 
 <ul>
@@ -1125,9 +1125,9 @@ Yoda
 <li class="fragment">Open science practices take time and effort</li>
 <li class="fragment">Quick (&amp; dirty) is, well…
 <ul>
-<li class="fragment">But you need to curate and conduct QA anyway</li>
+<li class="fragment">But you need to curate and conduct QA anyway, don’t you?</li>
 </ul></li>
-<li class="fragment">Pay now or pay later…</li>
+<li class="fragment">Pay now (gradually) or pay (a lot) later…</li>
 </ul>
 </div>
 </section>
@@ -1251,8 +1251,8 @@ Yoda
 <li><a href="https://databrary.org">Databrary.org</a> data library
 <ul>
 <li>Video + other identifiable/sensitive data</li>
-<li>Share openly, but not publicly, with restricted audience of researchers<sup>1</sup></li>
-<li>Share with explicit participant/parent permission</li>
+<li>Share openly, but not publicly, with restricted community of researchers<sup>1</sup> who are <a href="https://databrary.org/about/agreement.html">authorized</a> by their institutions.</li>
+<li>Share with explicit <a href="https://databrary.org/support/irb.html">participant/parent permission</a></li>
 </ul></li>
 </ul>
 <aside><ol class="aside-footnotes"><li id="fn2"><p>Better for data about people even if de-identified.</p></li></ol></aside></section>
@@ -1354,11 +1354,13 @@ participant-gender Unknown or not reported White
 <span class="citation" data-cites="Goodman2016-fi">(<a href="#/references" role="doc-biblioref" onclick="">Goodman et al., 2016</a>)</span>
 </p>
 </div><div class="column" style="width:50%;">
+<div>
 <ul>
-<li>Does a typical journal article satisfy this?</li>
-<li>Does project X from your lab group satisfy this?</li>
-<li>Reproducible to your team <span class="math inline">\(\rightarrow\)</span> reproducible to others</li>
+<li class="fragment">Does a typical journal article satisfy this?</li>
+<li class="fragment">Does project X from your lab group satisfy this?</li>
+<li class="fragment">Reproducible to your team <span class="math inline">\(\rightarrow\)</span> reproducible to others</li>
 </ul>
+</div>
 </div>
 </div>
 </section>
@@ -1368,8 +1370,7 @@ participant-gender Unknown or not reported White
 <li>Replicate and/or simulate</li>
 <li>Visualize early and often</li>
 <li>Preregister</li>
-<li>Embed frequent quality assurance checks into your workflows</li>
-<li>Distribute ‘curation’ burden throughout the project</li>
+<li>Embed quality assurance checks &amp; data curation into your workflows</li>
 </ul>
 </section>
 <section id="section-3" class="slide level2" data-background-iframe="https://gilmore-lab.github.io/sex-differences-project/analysis/qian-berenbaum-gilmore.html">
@@ -1388,8 +1389,8 @@ participant-gender Unknown or not reported White
 <h2>Ideas</h2>
 <div>
 <ul>
-<li class="fragment">What if we all shared our IRB protocols?</li>
-<li class="fragment">What if <em>all</em> first year projects were pre-registered replication studies with open materials, and were documented via a preprint published on <a href="https://psyarxiv.com">PsyArXiv</a>, cf <span class="citation" data-cites="Frank2012-fc">(<a href="#/references" role="doc-biblioref" onclick="">Frank &amp; Saxe, 2012</a>)</span>?</li>
+<li class="fragment">What if we all shared our IRB and task protocols?</li>
+<li class="fragment">What if <em>all</em> honors’ theses or first year projects were pre-registered replication studies with open materials, and were documented via a preprint published on <a href="https://psyarxiv.com">PsyArXiv</a> <span class="citation" data-cites="Frank2012-fc">(e.g., <a href="#/references" role="doc-biblioref" onclick="">Frank &amp; Saxe, 2012</a>)</span>?</li>
 <li class="fragment">What if the typical masters was a <a href="https://www.cos.io/initiatives/registered-reports">registered report</a>?</li>
 <li class="fragment">What if the PSYCH 100 participant pool data were permissioned and available for research beyond lab-specific screening?</li>
 </ul>
@@ -1397,14 +1398,34 @@ participant-gender Unknown or not reported White
 </section>
 <section id="open-science-practices-need-not-be-all-or-none" class="slide level2">
 <h2>Open science practices need not be all or none</h2>
+
+<img data-src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*hn9nGSNnalnFrSDlGHNctQ.png" class="r-stretch quarto-figure-center"></section>
+<section class="slide level2">
+
 <ul>
 <li>Greater openness <span class="math inline">\(\rightarrow\)</span> closer match between idealistic values and practical concerns</li>
+<li>Balance scientific norms <span class="citation" data-cites="Merton1973-vf">(<a href="#/references" role="doc-biblioref" onclick="">Merton, 1973</a>)</span> with counter-norms <span class="citation" data-cites="Mitroff1974-pp">(<a href="#/references" role="doc-biblioref" onclick="">Mitroff, 1974</a>)</span>
+<ul>
+<li>see <a href="https://psu-psychology.github.io/psych-490-reproducibility-2023-fall/survey-02.html">PSYCH 490.009 Survey 02</a></li>
+</ul></li>
 </ul>
 </section>
 <section class="slide level2">
 
-
-<img data-src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*hn9nGSNnalnFrSDlGHNctQ.png" class="r-stretch quarto-figure-center"></section>
+<div class="columns">
+<div class="column" style="width:40%;">
+<p>Richard Feynmann</p>
+<p><img data-src="https://upload.wikimedia.org/wikipedia/en/thumb/4/42/Richard_Feynman_Nobel.jpg/220px-Richard_Feynman_Nobel.jpg"></p>
+</div><div class="column" style="width:60%;">
+<blockquote>
+<p>The first principle is that <strong>you must not fool yourself—and you are the easiest person to fool</strong>. So you have to be very careful about that. After you’ve not fooled yourself, it’s easy not to fool other scientists…</p>
+</blockquote>
+<p style="text-align:center;">
+<span class="citation" data-cites="Feynman1974-ld">(<a href="#/references" role="doc-biblioref" onclick="">Feynman, 1974</a>)</span>
+</p>
+</div>
+</div>
+</section>
 <section id="what-about-the-other-crises" class="slide level2">
 <h2>What about the <em>other</em> crises?</h2>
 <div>
@@ -1412,7 +1433,7 @@ participant-gender Unknown or not reported White
 <li class="fragment">Psychological laws
 <ul>
 <li class="fragment">Fitts Law: Speed/accuracy trade-offs undermine rigor (quantity vs.&nbsp;quality)</li>
-<li class="fragment">Cognitive biases: Undermine rationality (including scientific inference); Must be guarded-against, see <span class="citation" data-cites="munafo_manifesto_2017">(<a href="#/references" role="doc-biblioref" onclick="">Munafò et al., 2017</a>)</span></li>
+<li class="fragment">Cognitive biases: Undermine rationality (including scientific inference); Must guard against, see <span class="citation" data-cites="munafo_manifesto_2017">(<a href="#/references" role="doc-biblioref" onclick="">Munafò et al., 2017</a>)</span></li>
 </ul></li>
 <li class="fragment">Construct validity
 <ul>
@@ -1544,6 +1565,9 @@ Merton, R. W. (1973). The normative structure of science. In R. K. Merton &amp; 
 </div>
 <div id="ref-Mischel2011-br" class="csl-entry" role="listitem">
 Mischel, W. (2011). Becoming a cumulative science. <em>APS Observer</em>, <em>22</em>(1). Retrieved from <a href="https://www.psychologicalscience.org/observer/becoming-a-cumulative-science">https://www.psychologicalscience.org/observer/becoming-a-cumulative-science</a>
+</div>
+<div id="ref-Mitroff1974-pp" class="csl-entry" role="listitem">
+Mitroff, I. I. (1974). Norms and counter-norms in a select group of the apollo moon scientists: A case study of the ambivalence of scientists. <em>American Sociological Review</em>, <em>39</em>(4), 579–595. <a href="https://doi.org/10.2307/2094423">https://doi.org/10.2307/2094423</a>
 </div>
 <div id="ref-Miyakawa2020-wu" class="csl-entry" role="listitem">
 Miyakawa, T. (2020). No raw data, no science: Another possible source of the reproducibility crisis. <em>Molecular Brain</em>, <em>13</em>(1), 24. <a href="https://doi.org/10.1186/s13041-020-0552-2">https://doi.org/10.1186/s13041-020-0552-2</a>
